# thin_swim

./: .gitignore  CMakeLists.txt  README.md  launch_network  node.c  node_manager.c  node_manager.h  start.c  state.c  state.h  stress_test.py  stress_test_runner.py  util.c  util.h
gossip/: averaging_msg_loss.py  dissemination_async.py  dissemination_si.py  dissemination_sir.py  draw_graphs.py  graphs.py  nodes.py
include/: constants.h  gossip_message.h  join_message.h  log.h  node_manager.h  state.h  time_utils.h  util.h
serf/: stress_test_serf.py
serf/extended/: static.txt
serf/normal/: rețea_mare_instabilă.txt  rețea_mică_stabilă.txt  small_unreliable.txt
src/: log.c  node.c  node_manager.c  state.c  time_utils.c
stress_test_results/fast/: big_unreliable_fast.txt  rețea_mare_stabilă.txt  rețea_mică_instabilă.txt  small_reliable_fast.txt  static.txt
stress_test_results/medium/: big_reliable_medium.txt  big_unreliable_medium.txt  small_reliable_medium.txt  small_unreliable_medium.txt  static.txt
stress_test_results/slow/: big_reliable_slow.txt  big_unreliable_slow.txt  no_issue_slow.txt  rețea_mică_stabilă.txt  small_unreliable_slow.txt
test/: test_log.c  test_sleep.c
